--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ button:hover {
 .featured-product {
     width: 100vw;
     max-width: 100%;
-    height: 80vh;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
