--- a/css/style.css
+++ b/css/style.css
@@ -256,9 +256,8 @@ button:hover {
 /*===BANNER ENDS===*/
 
 .featured-product {
-    width: 100vw;
-    max-width: 100%;
-    height: 80%;
+    width: 100%;
+    max-height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -346,6 +345,7 @@ section.promotion {
     width: 98vw;
     height: 100vh;
     margin: 0 auto;
+    margin-top: 4rem;
     display: flex;
     flex-wrap: nowrap;
     justify-content: flex-end;
