--- a/css/responsive-css/extra-small-responsive.css
+++ b/css/responsive-css/extra-small-responsive.css
@@ -299,5 +299,41 @@
     .rating {
         font-size: 0.9rem;
       }
+
+      /*===CAROUSEL ENDS===*/
+
+      div.custommer-support-container {
+        background-color: royalblue;
+    }
+
+    div.custommer-support-item {
+        width: 37%;
+        height: 10%;
+        padding: 1rem;
+    }
+    
+    div.custommer-support-item span.icon img {
+        width: 30px;
+        margin-bottom: 1.6rem;
+    }
+    
+    div.custommer-support-item p.title {
+        margin-bottom: 0;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 600;
+        text-transform: uppercase;
+    }
+    
+    div.custommer-support-item p.description {
+        margin-top: 0;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+    }
+    
+
+      div.break {
+          flex-basis: 100%;
+          height: 2rem;
+      }
 }
 
