--- a/css/responsive-css/extra-small-responsive.css
+++ b/css/responsive-css/extra-small-responsive.css
@@ -302,10 +302,6 @@
 
       /*===CAROUSEL ENDS===*/
 
-      div.custommer-support-container {
-        background-color: royalblue;
-    }
-
     div.custommer-support-item {
         width: 37%;
         height: 10%;
@@ -335,5 +331,9 @@
           flex-basis: 100%;
           height: 2rem;
       }
+
+      /*===CUSTOMER SUPPORT ENDS===*/
+
+      
 }
 
