--- a/css/style.css
+++ b/css/style.css
@@ -264,7 +264,7 @@ button:hover {
     /*background: #000;*/
 }
 
-.featured-product .title {
+.title {
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     font-size: 4rem;
@@ -461,7 +461,7 @@ div.custommer-support-item span.icon img {
     margin-bottom: 1.6rem;
 }
 
-div.custommer-support-item p.title {
+div.custommer-support-item p.support-title {
     margin-bottom: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -476,22 +476,111 @@ div.custommer-support-item p.description {
 
 /*===SUPPORTS END*/
 
+
 div.trending-product-container {
     width: 100%;
-    background-color: royalblue;
+    margin-bottom: 4rem;
 }
+
+div.trending-product-container-flex {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    /*background-color: red*/
+}
+
+div.trending-product-item {
+    width: 15%;
+    /*height: 50%;*/
+    background-color: rgb(172, 100, 78);
+    margin-left: 2.5rem;
+    margin-top: 2.5rem;
+}
+
+div.trending-product-imageRack {
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-position: top center !important;
+    border: 1px solid rgba(172, 100, 78, 0.5);
+}
+
 
 
 
 /*===FOOTER===*/
 
 footer {
-    width: 100%;
-    height: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
+    width: 98%;
+    height: 62vh;
+    margin: 0 auto 1rem;
+    background-color: rgba(0, 0, 0, 0.6);
     color: white;
+    padding: 2rem 0;
 }
 
+div.footer-row {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+p.footer-column-title {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    color: turquoise;
+}
+
+p.column-list, span.column-list {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    color: rgb(170, 170, 170);
+}
+
+div.copyright {
+    text-align: center;
+    margin: 2.5rem 0;
+}
+
+div.get-it-on img {
+    width: 20px;
+}
+
+div.app-flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div.get-it-on {
+    width: 100px;
+    height: 37px;
+    background-color: #fff;
+    color: black;
+    padding: 5px;
+    border-radius: 2px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+}
+
+div.apple {
+    background-color: rgb(0, 128, 128);
+    margin-left: 0.5rem;
+    color: #fff;
+}
+
+/*===CONTRIBUTION===*/
+
+div.contribute {
+    width: 80%;
+    margin: 2rem auto 0;
+    border-top: 1px solid rgba(148, 148, 148, 0.5);
+}
 
 
 
