--- a/css/responsive-css/extra-small-responsive.css
+++ b/css/responsive-css/extra-small-responsive.css
@@ -224,7 +224,7 @@
     /*===PRODUCT PROMOTION ENDS===*/
 
     div.carousel {
-        height: 60vh;
+        height: 55vh;
         /*background: #000;*/
     }
 
@@ -238,11 +238,6 @@
         width: 80%;
         /*height: 30vh;*/
         /*background-color: lightcoral;*/
-    }
-
-    div.carousel-item {
-
-        /*background-color: lightseagreen;*/
     }
 
     div.flex-row {
@@ -329,11 +324,44 @@
 
       div.break {
           flex-basis: 100%;
-          height: 2rem;
+          height: 1rem;
       }
 
       /*===CUSTOMER SUPPORT ENDS===*/
 
-      
+      div.trending-product-container p.title {
+        font-size: 1.6rem;
+      }
+    
+    div.trending-product-item {
+        width: 35%;
+    }
+    
+    div.trending-product-imageRack {
+        width: 100%;
+        height: 200px;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+        background-position: top center !important;
+        border: 1px solid rgba(172, 100, 78, 0.5);
+    }
+
+    /*===TRENDING ENDS===*/
+
+    footer {
+        margin: 0 auto 0rem;
+    }
+
+    p.footer-column-title {
+        margin-bottom: 1rem;
+    }
+
+    div.copyright {
+        margin: 1.5rem 0;
+    }
+
+    div.contribute {
+        margin: 1rem auto 0;
+    }
 }
 
